--- a/.compilerc
+++ b/.compilerc
@@ -5,7 +5,10 @@
       "react"
     ],
     "plugins": [
-      "transform-object-rest-spread"
+      "transform-object-rest-spread",
+      "transform-runtime",
+      "transform-object-rest-spread",
+      "transform-decorators-legacy"
     ]
   }
 }
