--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.1.0",
   "manifestVersion": "7",
   "description": "A bridge between TS and TM",
-  "main": "src/main.js",
+  "main": "src/es6-init.js",
   "scripts": {
     "release-content-update": "node scripts/releaseContentUpdate",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
-    "start": "cross-env NODE_ENV=development electron src/main.js",
+    "start": "cross-env NODE_ENV=development electron src/es6-init.js",
     "start-with-logger": "REDUX_LOGGER=true npm run start",
     "update-version": "node ./scripts/versionScript.js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
@@ -80,6 +80,7 @@
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
     "electron": "^3.0.10",
+    "electron-compilers": "^5.9.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-packager": "9.1.0",
     "electron-react-devtools": "0.5.3",
@@ -130,6 +131,7 @@
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
     "dotenv": "5.0.0",
+    "electron-compile": "^6.4.3",
     "electron-prebuilt-compile": "^3.0.10",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
