--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
@@ -131,8 +131,8 @@
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
     "dotenv": "5.0.0",
-    "electron-compile": "^6.4.3",
-    "electron-prebuilt-compile": "^3.0.10",
+    "electron-compile": "6.4.3",
+    "electron-prebuilt-compile": "3.0.10",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
     "gogs-client": "0.5.2",
