--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
-    "electron": "^3.0.10",
-    "electron-compilers": "^5.9.0",
+    "electron": "3.0.10",
+    "electron-compilers": "5.9.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-packager": "9.1.0",
     "electron-react-devtools": "0.5.3",
@@ -126,7 +126,6 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "babel-register": "6.26.0",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
