--- a/package.json
+++ b/package.json
@@ -185,8 +185,8 @@
     "usfm-js": "1.0.11",
     "uuid": "3.2.1",
     "word-aligner": "0.2.8",
-    "wordmap": "^0.4.3",
-    "wordmap-lexer": "^0.3.4",
+    "wordmap": "0.4.3",
+    "wordmap-lexer": "0.3.4",
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
     "zip-folder": "1.0.0"
