--- a/package.json
+++ b/package.json
@@ -76,13 +76,14 @@
     "babel-cli": "6.26.0",
     "babel-eslint": "8.2.2",
     "babel-jest": "21.2.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
-    "electron": "3.0.10",
-    "electron-compilers": "5.9.0",
+    "electron": "^3.0.10",
     "electron-devtools-installer": "^2.2.4",
     "electron-packager": "9.1.0",
+    "electron-prebuilt-compile": "1.6.11",
     "electron-react-devtools": "0.5.3",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "1.1.1",
@@ -121,17 +122,15 @@
     "babel-plugin-transform-async-to-generator": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
-    "babel-plugin-transform-runtime": "6.23.0",
     "babel-polyfill": "6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "babel-register": "6.26.0",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
     "dotenv": "5.0.0",
-    "electron-compile": "6.4.3",
-    "electron-prebuilt-compile": "3.0.10",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
     "gogs-client": "0.5.2",
