fixed startup path.

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "1.1.0",
   "manifestVersion": "7",
   "description": "A bridge between TS and TM",
-  "main": "src/es6-init.js",
+  "main": "src/main.js",
   "scripts": {
     "release-content-update": "node scripts/releaseContentUpdate",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
-    "start": "cross-env NODE_ENV=development electron src/es6-init.js",
+    "start": "cross-env NODE_ENV=development electron src/main.js",
     "start-with-logger": "REDUX_LOGGER=true npm run start",
     "update-version": "node ./scripts/versionScript.js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
