refactored tool loading

--- a/.compilerc
+++ b/.compilerc
@@ -8,6 +8,7 @@
       "transform-object-rest-spread",
       "transform-runtime",
       "transform-decorators-legacy"
-    ]
+    ],
+    "sourceMaps": "inline"
   }
 }
