--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "release-content-update": "node scripts/releaseContentUpdate",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
     "find:missing-locale": "node scripts/locale/find_missing.js src/locale/English-en_US.json src/js",
-    "start": "cross-env NODE_ENV=development electron src/es6-init.js",
+    "start": "cross-env NODE_ENV=development electron src/es6-init.js -remote-debugging-port=9222",
     "start-with-logger": "REDUX_LOGGER=true npm run start",
     "update-version": "node ./scripts/versionScript.js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
