--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "translationCore",
+  "name": "translationCore test",
   "productName": "translationCore",
   "version": "1.1.0",
   "manifestVersion": "7",
