--- a/package.json
+++ b/package.json
@@ -143,8 +143,7 @@
     "lodash": "^4.17.11",
     "material-ui": "0.20.0",
     "mkdirp": "0.5.1",
-    "moment": "^2.22.2",
-    "npm": "5.1.0",
+    "moment": "2.22.2",
     "open": "0.0.5",
     "opn": "5.1.0",
     "os-locale": "2.1.0",
