--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "deep-equal": "1.0.1",
     "dotenv": "5.0.0",
     "electron-compile": "6.4.3",
-    "electron-prebuilt-compile": "3.0.10",
+    "electron-prebuilt-compile": "^3.0.13",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
     "gogs-client": "0.5.2",
@@ -180,7 +180,7 @@
     "tc-source-content-updater": "0.3.3",
     "tc-strings": "0.1.7",
     "tc-tool": "2.0.0",
-    "tc-ui-toolkit": "0.12.7",
+    "tc-ui-toolkit": "^0.12.8",
     "truncate-utf8-bytes": "1.0.2",
     "usfm-js": "1.0.11",
     "uuid": "3.2.1",
