--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "start-with-logger": "REDUX_LOGGER=true npm run start",
     "update-version": "node ./scripts/versionScript.js",
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
-    "find-duplicate-dependencies": "find-duplicate-dependencies > find-duplicate-dependencies.log",
-    "show-duplicate-dependencies": "npm run find-duplicate-dependencies; cat find-duplicate-dependencies.log; echo \"\n\n\nSee full list at: \\033[34m\\033[4mfind-duplicate-dependencies.log\\033[0m\n\nTo install node packages same as concourse builds do: '\\033[34mnpm ci\\033[0m'\n\n\"",
-    "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i && npm run show-duplicate-dependencies",
+    "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i",
     "lint": "eslint ./src",
     "test": "eslint ./src && jest",
     "ci-test": "eslint ./src && jest --coverage",
@@ -90,7 +88,6 @@
     "eslint-plugin-jest": "22.1.2",
     "eslint-plugin-react": "7.7.0",
     "fetch-mock": "5.13.1",
-    "find-duplicate-dependencies": "^2.0.1",
     "glob": "7.1.2",
     "gulp": "4.0.0",
     "gulp-change": "1.0.0",
@@ -183,7 +180,7 @@
     "tc-tool": "2.0.0",
     "tc-ui-toolkit": "0.12.7",
     "truncate-utf8-bytes": "1.0.2",
-    "usfm-js": "1.0.11",
+    "usfm-js": "github:translationCoreApps/usfm-js#bugfix-mcleanb-5388",
     "uuid": "3.2.1",
     "word-aligner": "0.2.8",
     "wordmap": "0.4.3",
