--- a/package.json
+++ b/package.json
@@ -178,9 +178,9 @@
     "tc-source-content-updater": "0.3.3",
     "tc-strings": "0.1.7",
     "tc-tool": "2.0.0",
-    "tc-ui-toolkit": "0.12.7",
+    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#bugfix-mcleanb-5388",
     "truncate-utf8-bytes": "1.0.2",
-    "usfm-js": "github:translationCoreApps/usfm-js#bugfix-mcleanb-5388",
+    "usfm-js": "1.0.12",
     "uuid": "3.2.1",
     "word-aligner": "0.2.8",
     "wordmap": "0.4.3",
