--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "locale-key-comparison": "node ./scripts/locale_key_comparison.js",
     "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i",
     "lint": "eslint ./src",
-    "test": "eslint ./src && jest --env=node",
-    "ci-test": "eslint ./src && jest --coverage --env=node",
+    "test": "eslint ./src && jest",
+    "ci-test": "eslint ./src && jest --coverage",
     "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
-    "coverage": "jest --coverage --env=node",
+    "coverage": "jest --coverage",
     "load-apps": "git submodule update --init --recursive",
     "update-apps": "git submodule foreach --recursive git checkout develop && git submodule foreach --recursive git pull",
     "install-electron-forge": "npm i -g electron-forge@3.2.0",
