--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "manifestVersion": "7",
   "description": "A bridge between TS and TM",
   "main": "src/es6-init.js",
+  "engines": {
+    "node": ">=8.9.3 <9"
+  },
   "scripts": {
     "release-content-update": "node scripts/releaseContentUpdate",
     "find:extra-locale": "node scripts/locale/find_extras.js src/locale/English-en_US.json src/js",
