--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "tc-source-content-updater": "0.3.4",
     "tc-strings": "0.1.7",
     "tc-tool": "2.0.0",
-    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#bugfix-mcleanb-5388",
+    "tc-ui-toolkit": "0.12.9",
     "truncate-utf8-bytes": "1.0.2",
     "usfm-js": "1.0.12",
     "uuid": "3.2.1",
