--- a/package.json
+++ b/package.json
@@ -109,6 +109,9 @@
     "yargs": "10.0.3"
   },
   "dependencies": {
+    "@material-ui/core": "^3.8.3",
+    "@material-ui/icons": "^3.0.2",
+    "@material-ui/styles": "^3.0.0-alpha.7",
     "@neutrinog/electron-dl": "1.11.1",
     "adm-zip": "^0.4.11",
     "agentkeepalive": "4.0.0",
@@ -139,6 +142,7 @@
     "konami-code-js": "0.8.0",
     "lodash": "^4.17.11",
     "material-ui": "0.20.0",
+    "memoize-one": "^5.0.0",
     "mkdirp": "0.5.1",
     "moment": "2.22.2",
     "open": "0.0.5",
