updated dependencies and added babel plugin

--- a/.babelrc
+++ b/.babelrc
@@ -17,6 +17,7 @@
         "polyfill": false,
         "regenerator": true
       },
+      "transform-class-properties",
       "transform-object-rest-spread",
       "transform-decorators-legacy",
       "jest-hoist",
