--- a/.compilerc
+++ b/.compilerc
@@ -5,6 +5,7 @@
       "react"
     ],
     "plugins": [
+      "transform-class-properties",
       "transform-object-rest-spread",
       "transform-runtime",
       "transform-decorators-legacy"
