--- a/package.json
+++ b/package.json
@@ -109,9 +109,9 @@
     "yargs": "10.0.3"
   },
   "dependencies": {
-    "@material-ui/core": "^3.8.3",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/styles": "^3.0.0-alpha.7",
+    "@material-ui/core": "3.8.3",
+    "@material-ui/icons": "3.0.2",
+    "@material-ui/styles": "3.0.0-alpha.7",
     "@neutrinog/electron-dl": "1.11.1",
     "adm-zip": "^0.4.11",
     "agentkeepalive": "4.0.0",
