--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "axios": "0.17.1",
     "babel-plugin-jest-hoist": "21.2.0",
     "babel-plugin-transform-async-to-generator": "6.24.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-plugin-transform-runtime": "6.23.0",
@@ -143,7 +143,7 @@
     "konami-code-js": "0.8.0",
     "lodash": "^4.17.11",
     "material-ui": "0.20.0",
-    "memoize-one": "^5.0.0",
+    "memoize-one": "5.0.0",
     "mkdirp": "0.5.1",
     "moment": "2.22.2",
     "open": "0.0.5",
