--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "overwrite-resources": "rm -rf tcResources/en/bibles tcResources/en/translationHelps tcResources/grc tcResources/hi && npm run update-resources"
   },
   "jest": {
+    "testEnvironment": "node",
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
       "!**/node_modules/**",
