--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
-    "electron": "3.0.11",
+    "electron": "4.0.3",
     "electron-compilers": "5.9.0",
     "electron-devtools-installer": "^2.2.4",
     "electron-packager": "9.1.0",
@@ -130,8 +130,8 @@
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
     "dotenv": "5.0.0",
-    "electron-compile": "6.4.3",
-    "electron-prebuilt-compile": "^3.0.13",
+    "electron-compile": "6.4.4",
+    "electron-prebuilt-compile": "4.0.0",
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
     "gogs-client": "0.5.2",
