Revert "updated dependencies and unit tests with word spacing fixes."
This reverts commit 738fcc3b82af4295e05ea4eab5eb650630433b6e.

--- a/package.json
+++ b/package.json
@@ -181,11 +181,11 @@
     "tc-source-content-updater": "0.3.4",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
-    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#bugfix-mcleanb-50",
+    "tc-ui-toolkit": "0.13.11",
     "truncate-utf8-bytes": "1.0.2",
-    "usfm-js": "1.0.13",
+    "usfm-js": "1.0.12",
     "uuid": "3.2.1",
-    "word-aligner": "0.2.11",
+    "word-aligner": "0.2.10",
     "wordmap": "0.4.3",
     "wordmap-lexer": "0.3.4",
     "xregexp": "3.2.0",
