--- a/package.json
+++ b/package.json
@@ -166,6 +166,7 @@
     "react-toggle": "4.0.2",
     "react-tooltip": "3.6.0",
     "reactable": "0.14.1",
+    "readdir-enhanced": "^2.2.4",
     "redux": "3.7.2",
     "redux-batched-actions": "^0.4.1",
     "redux-logger": "3.0.6",
