working on adding USFM 3.0 tag to export

--- a/package.json
+++ b/package.json
@@ -183,9 +183,9 @@
     "tc-tool": "2.1.0",
     "tc-ui-toolkit": "0.13.11",
     "truncate-utf8-bytes": "1.0.2",
-    "usfm-js": "1.0.13",
+    "usfm-js": "github:translationCoreApps/usfm-js#feature-mcleanb-5799",
     "uuid": "3.2.1",
-    "word-aligner": "0.2.11",
+    "word-aligner": "github:translationCoreApps/word-aligner#feature-mcleanb-5799",
     "wordmap": "0.4.3",
     "wordmap-lexer": "0.3.4",
     "xregexp": "3.2.0",
