--- a/package.json
+++ b/package.json
@@ -177,7 +177,7 @@
     "semver": "5.5.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "^0.4.0",
+    "tc-source-content-updater": "0.4.0",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
     "tc-ui-toolkit": "0.13.11",
