update usfm-js (sub)dependencies.

--- a/package.json
+++ b/package.json
@@ -178,14 +178,14 @@
     "semver": "5.5.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "0.3.4",
+    "tc-source-content-updater": "0.4.1",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
-    "tc-ui-toolkit": "0.13.14",
+    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#bugfix-dependencies-usfm-js",
     "truncate-utf8-bytes": "1.0.2",
-    "usfm-js": "1.0.14",
+    "usfm-js": "2.0.0",
     "uuid": "3.2.1",
-    "word-aligner": "0.2.12",
+    "word-aligner": "0.2.13",
     "wordmap": "0.4.3",
     "wordmap-lexer": "0.3.4",
     "xregexp": "3.2.0",
