--- a/package.json
+++ b/package.json
@@ -181,7 +181,7 @@
     "tc-source-content-updater": "0.3.4",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
-    "tc-ui-toolkit": "0.13.14",
+    "tc-ui-toolkit": "github:translationCoreApps/tc-ui-toolkit#bugfix-mcleanb-5851",
     "truncate-utf8-bytes": "1.0.2",
     "usfm-js": "1.0.14",
     "uuid": "3.2.1",
