working on going back to simple-git

--- a/package.json
+++ b/package.json
@@ -135,10 +135,7 @@
     "follow-redirects": "1.2.5",
     "fs-extra": "4.0.3",
     "gogs-client": "0.5.2",
-    "ignore": "^5.0.4",
-    "isomorphic-git": "0.51.2",
     "json-stringify-safe": "5.0.1",
-    "klaw": "^3.0.0",
     "konami-code-js": "0.8.0",
     "lodash": "^4.17.11",
     "material-ui": "0.20.0",
@@ -176,6 +173,7 @@
     "rimraf": "^2.6.2",
     "selections": "0.1.7",
     "semver": "5.5.0",
+    "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
     "tc-source-content-updater": "0.3.5",
