--- a/package.json
+++ b/package.json
@@ -180,7 +180,7 @@
     "tc-source-content-updater": "0.4.0",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
-    "tc-tool-wrapper": "^0.3.4",
+    "tc-tool-wrapper": "0.3.4",
     "tc-ui-toolkit": "0.13.17",
     "truncate-utf8-bytes": "1.0.2",
     "usfm-js": "2.0.0",
