--- a/package.json
+++ b/package.json
@@ -126,6 +126,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "checking-tool-wrapper": "^0.4.0",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -180,7 +181,6 @@
     "tc-source-content-updater": "0.4.0",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
-    "tc-tool-wrapper": "0.3.4",
     "tc-ui-toolkit": "0.13.17",
     "truncate-utf8-bytes": "1.0.2",
     "usfm-js": "2.0.0",
