--- a/package.json
+++ b/package.json
@@ -183,6 +183,7 @@
     "tc-tool": "2.1.0",
     "tc-ui-toolkit": "0.13.17",
     "truncate-utf8-bytes": "1.0.2",
+    "tsv-groupdata-parser": "^0.7.2",
     "usfm-js": "2.0.0",
     "uuid": "3.2.1",
     "word-aligner": "0.2.13",
