--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "checking-tool-wrapper": "0.4.1",
+    "checking-tool-wrapper": "github:translationCoreApps/checking-tool-wrapper#bugfix-mannycolon-5801",
     "crypto-js": "3.1.8",
     "csv": "1.2.1",
     "deep-equal": "1.0.1",
@@ -150,12 +150,12 @@
     "ospath": "1.2.2",
     "path-extra": "3.0.0",
     "prop-types": "15.7.2",
-    "react": "16.7.0",
+    "react": "16.8.6",
     "react-bootstrap": "0.32.4",
     "react-container-dimensions": "1.3.3",
     "react-dnd": "2.5.4",
     "react-dnd-html5-backend": "2.5.4",
-    "react-dom": "16.7.0",
+    "react-dom": "16.8.6",
     "react-localize-redux": "2.15.1",
     "react-redux": "5.1.1",
     "react-remarkable": "1.1.3",
