--- a/package.json
+++ b/package.json
@@ -178,12 +178,12 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "0.4.0",
+    "tc-source-content-updater": "github:translationCoreApps/tc-source-content-updater#feature-mannycolon-5920",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
     "tc-ui-toolkit": "0.14.0",
     "truncate-utf8-bytes": "1.0.2",
-    "tsv-groupdata-parser": "0.7.2",
+    "tsv-groupdata-parser": "0.8.0",
     "usfm-js": "2.0.0",
     "uuid": "3.2.1",
     "word-aligner": "0.2.13",
