--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "install-electron-forge": "npm i -g electron-forge@3.2.0",
     "prettier-resource": "prettier --single-quote --print-width 80 --trailing-comma all --write 'tcResources/**/*.json'",
     "doc": "jsdoc -c jsdoc/jsdoc.json",
-    "update-resources": "node scripts/resources/updateResources.js tcResources en hi grc hbo",
-    "overwrite-resources": "rm -rf tcResources/en/bibles tcResources/en/translationHelps tcResources/grc tcResources/hi && npm run update-resources"
+    "update-resources": "node scripts/resources/updateResources.js tcResources en hi el-x-koine hbo",
+    "overwrite-resources": "rm -rf tcResources/en/bibles tcResources/en/translationHelps tcResources/el-x-koine tcResources/hi && npm run update-resources"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -178,7 +178,7 @@
     "simple-git": "1.43.0",
     "string-punctuation-tokenizer": "0.9.4",
     "sudo-prompt": "6.2.1",
-    "tc-source-content-updater": "0.4.0",
+    "tc-source-content-updater": "github:translationCoreApps/tc-source-content-updater#bugfix-mcleanb-5963",
     "tc-strings": "0.1.7",
     "tc-tool": "2.1.0",
     "tc-ui-toolkit": "0.14.0",
