--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "translationCore",
   "productName": "translationCore",
   "version": "1.1.4",
+  "minProjectversion": "1.1.4",
   "manifestVersion": "7",
   "description": "A bridge between TS and TM",
   "main": "src/es6-init.js",
