--- a/tcResources/en/translationHelps/translationNotes/v15/manifest.json
+++ b/tcResources/en/translationHelps/translationNotes/v15/manifest.json
@@ -370,13 +370,13 @@
     "description": "Open-licensed exegetical notes that provide historical, cultural, and linguistic information for translators. It provides translators and checkers with pertinent, just-in-time information to help them make the best possible translation decisions.",
     "format": "text/tsv",
     "identifier": "tn",
-    "issued": "2019-02-08",
+    "issued": "2019-05-21",
     "language": {
       "direction": "ltr",
       "identifier": "en",
       "title": "English"
     },
-    "modified": "2018-02-08",
+    "modified": "2019-05-21",
     "publisher": "unfoldingWord",
     "relation": [
       "en/ult",
@@ -387,13 +387,13 @@
       {
         "identifier": "tn",
         "language": "en",
-        "version": "14"
+        "version": "15"
       }
     ],
     "subject": "TSV Translation Notes",
-    "title": "translationNotes",
+    "title": "unfoldingWord® Translation Notes",
     "type": "help",
-    "version": "14"
+    "version": "15"
   },
   "checking": {
     "checking_entity": [
@@ -403,7 +403,7 @@
   },
   "projects": [
     {
-      "title": "Genesis translationNotes",
+      "title": "Genesis unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "gen",
       "sort": 1,
@@ -413,7 +413,7 @@
       ]
     },
     {
-      "title": "Exodus translationNotes",
+      "title": "Exodus unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "exo",
       "sort": 2,
@@ -423,7 +423,7 @@
       ]
     },
     {
-      "title": "Leviticus translationNotes",
+      "title": "Leviticus unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "lev",
       "sort": 3,
@@ -433,7 +433,7 @@
       ]
     },
     {
-      "title": "Numbers translationNotes",
+      "title": "Numbers unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "num",
       "sort": 4,
@@ -443,7 +443,7 @@
       ]
     },
     {
-      "title": "Deuteronomy translationNotes",
+      "title": "Deuteronomy unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "deu",
       "sort": 5,
@@ -453,7 +453,7 @@
       ]
     },
     {
-      "title": "Joshua translationNotes",
+      "title": "Joshua unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jos",
       "sort": 6,
@@ -463,7 +463,7 @@
       ]
     },
     {
-      "title": "Judges translationNotes",
+      "title": "Judges unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jdg",
       "sort": 7,
@@ -473,7 +473,7 @@
       ]
     },
     {
-      "title": "Ruth translationNotes",
+      "title": "Ruth unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "rut",
       "sort": 8,
@@ -483,7 +483,7 @@
       ]
     },
     {
-      "title": "1 Samuel translationNotes",
+      "title": "1 Samuel unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1sa",
       "sort": 9,
@@ -493,7 +493,7 @@
       ]
     },
     {
-      "title": "2 Samuel translationNotes",
+      "title": "2 Samuel unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2sa",
       "sort": 10,
@@ -503,7 +503,7 @@
       ]
     },
     {
-      "title": "1 Kings translationNotes",
+      "title": "1 Kings unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1ki",
       "sort": 11,
@@ -513,7 +513,7 @@
       ]
     },
     {
-      "title": "2 Kings translationNotes",
+      "title": "2 Kings unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2ki",
       "sort": 12,
@@ -523,7 +523,7 @@
       ]
     },
     {
-      "title": "1 Chronicles translationNotes",
+      "title": "1 Chronicles unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1ch",
       "sort": 13,
@@ -533,7 +533,7 @@
       ]
     },
     {
-      "title": "2 Chronicles translationNotes",
+      "title": "2 Chronicles unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2ch",
       "sort": 14,
@@ -543,7 +543,7 @@
       ]
     },
     {
-      "title": "Ezra translationNotes",
+      "title": "Ezra unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "ezr",
       "sort": 15,
@@ -553,7 +553,7 @@
       ]
     },
     {
-      "title": "Nehemiah translationNotes",
+      "title": "Nehemiah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "neh",
       "sort": 16,
@@ -563,7 +563,7 @@
       ]
     },
     {
-      "title": "Esther translationNotes",
+      "title": "Esther unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "est",
       "sort": 17,
@@ -573,7 +573,7 @@
       ]
     },
     {
-      "title": "Job translationNotes",
+      "title": "Job unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "job",
       "sort": 18,
@@ -583,7 +583,7 @@
       ]
     },
     {
-      "title": "Psalms translationNotes",
+      "title": "Psalms unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "psa",
       "sort": 19,
@@ -593,7 +593,7 @@
       ]
     },
     {
-      "title": "Proverbs translationNotes",
+      "title": "Proverbs unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "pro",
       "sort": 20,
@@ -603,7 +603,7 @@
       ]
     },
     {
-      "title": "Ecclesiastes translationNotes",
+      "title": "Ecclesiastes unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "ecc",
       "sort": 21,
@@ -613,7 +613,7 @@
       ]
     },
     {
-      "title": "Song of Solomon translationNotes",
+      "title": "Song of Solomon unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "sng",
       "sort": 22,
@@ -623,7 +623,7 @@
       ]
     },
     {
-      "title": "Isaiah translationNotes",
+      "title": "Isaiah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "isa",
       "sort": 23,
@@ -633,7 +633,7 @@
       ]
     },
     {
-      "title": "Jeremiah translationNotes",
+      "title": "Jeremiah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jer",
       "sort": 24,
@@ -643,7 +643,7 @@
       ]
     },
     {
-      "title": "Lamentations translationNotes",
+      "title": "Lamentations unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "lam",
       "sort": 25,
@@ -653,7 +653,7 @@
       ]
     },
     {
-      "title": "Ezekiel translationNotes",
+      "title": "Ezekiel unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "ezk",
       "sort": 26,
@@ -663,7 +663,7 @@
       ]
     },
     {
-      "title": "Daniel translationNotes",
+      "title": "Daniel unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "dan",
       "sort": 27,
@@ -673,7 +673,7 @@
       ]
     },
     {
-      "title": "Hosea translationNotes",
+      "title": "Hosea unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "hos",
       "sort": 28,
@@ -683,7 +683,7 @@
       ]
     },
     {
-      "title": "Joel translationNotes",
+      "title": "Joel unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jol",
       "sort": 29,
@@ -693,7 +693,7 @@
       ]
     },
     {
-      "title": "Amos translationNotes",
+      "title": "Amos unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "amo",
       "sort": 30,
@@ -703,7 +703,7 @@
       ]
     },
     {
-      "title": "Obadiah translationNotes",
+      "title": "Obadiah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "oba",
       "sort": 31,
@@ -713,7 +713,7 @@
       ]
     },
     {
-      "title": "Jonah translationNotes",
+      "title": "Jonah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jon",
       "sort": 32,
@@ -723,7 +723,7 @@
       ]
     },
     {
-      "title": "Micah translationNotes",
+      "title": "Micah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "mic",
       "sort": 33,
@@ -733,7 +733,7 @@
       ]
     },
     {
-      "title": "Nahum translationNotes",
+      "title": "Nahum unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "nam",
       "sort": 34,
@@ -743,7 +743,7 @@
       ]
     },
     {
-      "title": "Habakkuk translationNotes",
+      "title": "Habakkuk unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "hab",
       "sort": 35,
@@ -753,7 +753,7 @@
       ]
     },
     {
-      "title": "Zephaniah translationNotes",
+      "title": "Zephaniah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "zep",
       "sort": 36,
@@ -763,7 +763,7 @@
       ]
     },
     {
-      "title": "Haggai translationNotes",
+      "title": "Haggai unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "hag",
       "sort": 37,
@@ -773,7 +773,7 @@
       ]
     },
     {
-      "title": "Zechariah translationNotes",
+      "title": "Zechariah unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "zec",
       "sort": 38,
@@ -783,7 +783,7 @@
       ]
     },
     {
-      "title": "Malachi translationNotes",
+      "title": "Malachi unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "mal",
       "sort": 39,
@@ -793,7 +793,7 @@
       ]
     },
     {
-      "title": "Matthew translationNotes",
+      "title": "Matthew unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "mat",
       "sort": 40,
@@ -803,7 +803,7 @@
       ]
     },
     {
-      "title": "Mark translationNotes",
+      "title": "Mark unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "mrk",
       "sort": 41,
@@ -813,7 +813,7 @@
       ]
     },
     {
-      "title": "Luke translationNotes",
+      "title": "Luke unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "luk",
       "sort": 42,
@@ -823,7 +823,7 @@
       ]
     },
     {
-      "title": "John translationNotes",
+      "title": "John unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jhn",
       "sort": 43,
@@ -833,7 +833,7 @@
       ]
     },
     {
-      "title": "Acts translationNotes",
+      "title": "Acts unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "act",
       "sort": 44,
@@ -843,7 +843,7 @@
       ]
     },
     {
-      "title": "Romans translationNotes",
+      "title": "Romans unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "rom",
       "sort": 45,
@@ -853,7 +853,7 @@
       ]
     },
     {
-      "title": "1 Corinthians translationNotes",
+      "title": "1 Corinthians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1co",
       "sort": 46,
@@ -863,7 +863,7 @@
       ]
     },
     {
-      "title": "2 Corinthians translationNotes",
+      "title": "2 Corinthians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2co",
       "sort": 47,
@@ -873,7 +873,7 @@
       ]
     },
     {
-      "title": "Galatians translationNotes",
+      "title": "Galatians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "gal",
       "sort": 48,
@@ -883,7 +883,7 @@
       ]
     },
     {
-      "title": "Ephesians translationNotes",
+      "title": "Ephesians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "eph",
       "sort": 49,
@@ -893,7 +893,7 @@
       ]
     },
     {
-      "title": "Philippians translationNotes",
+      "title": "Philippians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "php",
       "sort": 50,
@@ -903,7 +903,7 @@
       ]
     },
     {
-      "title": "Colossians translationNotes",
+      "title": "Colossians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "col",
       "sort": 51,
@@ -913,7 +913,7 @@
       ]
     },
     {
-      "title": "1 Thessalonians translationNotes",
+      "title": "1 Thessalonians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1th",
       "sort": 52,
@@ -923,7 +923,7 @@
       ]
     },
     {
-      "title": "2 Thessalonians translationNotes",
+      "title": "2 Thessalonians unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2th",
       "sort": 53,
@@ -933,7 +933,7 @@
       ]
     },
     {
-      "title": "1 Timothy translationNotes",
+      "title": "1 Timothy unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1ti",
       "sort": 54,
@@ -943,7 +943,7 @@
       ]
     },
     {
-      "title": "2 Timothy translationNotes",
+      "title": "2 Timothy unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2ti",
       "sort": 55,
@@ -953,7 +953,7 @@
       ]
     },
     {
-      "title": "Titus translationNotes",
+      "title": "Titus unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "tit",
       "sort": 56,
@@ -963,7 +963,7 @@
       ]
     },
     {
-      "title": "Philemon translationNotes",
+      "title": "Philemon unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "phm",
       "sort": 57,
@@ -973,7 +973,7 @@
       ]
     },
     {
-      "title": "Hebrews translationNotes",
+      "title": "Hebrews unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "heb",
       "sort": 58,
@@ -983,7 +983,7 @@
       ]
     },
     {
-      "title": "James translationNotes",
+      "title": "James unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jas",
       "sort": 59,
@@ -993,7 +993,7 @@
       ]
     },
     {
-      "title": "1 Peter translationNotes",
+      "title": "1 Peter unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1pe",
       "sort": 60,
@@ -1003,7 +1003,7 @@
       ]
     },
     {
-      "title": "2 Peter translationNotes",
+      "title": "2 Peter unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2pe",
       "sort": 61,
@@ -1013,7 +1013,7 @@
       ]
     },
     {
-      "title": "1 John translationNotes",
+      "title": "1 John unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "1jn",
       "sort": 62,
@@ -1023,7 +1023,7 @@
       ]
     },
     {
-      "title": "2 John translationNotes",
+      "title": "2 John unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "2jn",
       "sort": 63,
@@ -1033,7 +1033,7 @@
       ]
     },
     {
-      "title": "3 John translationNotes",
+      "title": "3 John unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "3jn",
       "sort": 64,
@@ -1043,7 +1043,7 @@
       ]
     },
     {
-      "title": "Jude translationNotes",
+      "title": "Jude unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "jud",
       "sort": 65,
@@ -1053,7 +1053,7 @@
       ]
     },
     {
-      "title": "Revelation translationNotes",
+      "title": "Revelation unfoldingWord® Translation Notes",
       "versification": "",
       "identifier": "rev",
       "sort": 66,
@@ -1063,5 +1063,5 @@
       ]
     }
   ],
-  "catalog_modified_time": "2019-02-08T16:19:07+00:00"
+  "catalog_modified_time": "2019-05-21T19:48:33+00:00"
 }
