--- a/tcResources/en/translationHelps/translationWords/v10/manifest.json
+++ b/tcResources/en/translationHelps/translationWords/v10/manifest.json
@@ -18,13 +18,13 @@
     "description": "A basic Bible lexicon that provides translators with clear, concise definitions and translation suggestions for every important word in the Bible. It provides translators and checkers with essential lexical information to help them make the best possible translation decisions.",
     "format": "text/markdown",
     "identifier": "tw",
-    "issued": "2018-09-24",
+    "issued": "2019-05-17",
     "language": {
       "identifier": "en",
       "title": "English",
       "direction": "ltr"
     },
-    "modified": "2018-09-24",
+    "modified": "2019-05-17",
     "publisher": "unfoldingWord",
     "relation": [
       "en/ult",
@@ -38,13 +38,13 @@
       {
         "identifier": "tw",
         "language": "en",
-        "version": "9"
+        "version": "10"
       }
     ],
     "subject": "Translation Words",
-    "title": "translationWords",
+    "title": "unfoldingWord® Translation Words",
     "type": "dict",
-    "version": "9"
+    "version": "10"
   },
   "checking": {
     "checking_entity": [
@@ -58,9 +58,9 @@
       "identifier": "bible",
       "path": "./bible",
       "sort": 0,
-      "title": "translationWords",
+      "title": "unfoldingWord® Translation Words",
       "versification": null
     }
   ],
-  "catalog_modified_time": "2018-09-24T16:05:32+00:00"
+  "catalog_modified_time": "2019-05-17T19:25:28+00:00"
 }
