--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "install-electron-forge": "npm i -g electron-forge@3.2.0",
     "prettier-resource": "prettier --single-quote --print-width 80 --trailing-comma all --write 'tcResources/**/*.json'",
     "doc": "jsdoc -c jsdoc/jsdoc.json",
-    "update-resources": "node scripts/resources/updateResources.js tcResources en",
-    "overwrite-resources": "rm -rf tcResources/en/bibles tcResources/en/translationHelps && npm run update-resources"
+    "update-resources": "node scripts/resources/updateResources.js tcResources en hi el-x-koine hbo",
+    "overwrite-resources": "rm -rf tcResources/hi && npm run update-resources"
   },
   "jest": {
     "collectCoverageFrom": [
