--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prettier-resource": "prettier --single-quote --print-width 80 --trailing-comma all --write 'tcResources/**/*.json'",
     "doc": "jsdoc -c jsdoc/jsdoc.json",
     "update-resources": "node scripts/resources/updateResources.js tcResources en hi el-x-koine hbo",
-    "overwrite-resources": "rm -rf tcResources/hi && npm run update-resources"
+    "overwrite-resources": "rm -rf tcResources/en/bibles tcResources/en/translationHelps tcResources/el-x-koine tcResources/hi && npm run update-resources"
   },
   "jest": {
     "collectCoverageFrom": [
