added wordmap fixes

--- a/package.json
+++ b/package.json
@@ -191,7 +191,7 @@
     "uuid": "3.2.1",
     "word-aligner": "0.2.15",
     "wordmap": "0.4.3",
-    "wordmap-lexer": "0.3.4",
+    "wordmap-lexer": "github:translationCoreApps/wordMAP-lexer#feature-jay-6282-2",
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
     "zip-folder": "1.0.0"
