--- a/package.json
+++ b/package.json
@@ -190,7 +190,7 @@
     "usfm-js": "2.0.2",
     "uuid": "3.2.1",
     "word-aligner": "0.2.15",
-    "wordmap": "github:translationCoreApps/wordmap#feature-mcleanb-3579",
+    "wordmap": "0.4.4",
     "wordmap-lexer": "0.3.4",
     "xregexp": "3.2.0",
     "yamljs": "0.3.0",
