--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.8.0",
     "eslint": "5.9.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jest": "22.1.2",
     "eslint-plugin-react": "7.7.0",
     "fetch-mock": "5.13.1",
