added more plugins

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,8 +12,19 @@
     }
   },
   "rules": {
+    "array-callback-return": "error",
+    "no-await-in-loop": "error",
+    "object-curly-newline": ["error", { "minProperties": 2 }],
+    "brace-style": ["error", "1tbs", {"allowSingleLine": false}],
+    "no-return-await": "error",
+    "quote-props": ["error", "consistent"],
+    "require-await": "error",
+    "no-async-promise-executor": "error",
+    "no-throw-literal": "warn",
+    "no-nested-ternary": "error",
+    "no-duplicate-imports": ["error", {"includeExports": false}],
     "indent": ["error", 2],
-    "import/first": ["error", "always"],
+    "import/first": "error",
     "react/no-find-dom-node": "warn",
     "no-undef": "error",
     "no-unused-vars":"error",
@@ -26,14 +37,14 @@
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
     "react/no-unescaped-entities": "off",
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": "error",
     "quotes": ["error", "single", {"allowTemplateLiterals": true}],
     "comma-dangle": ["error", "always-multiline"],
     "keyword-spacing": "error",
     "no-multi-spaces": "error",
     "arrow-body-style": ["error", "as-needed"],
     "space-before-function-paren": ["error", {"anonymous": "always", "named": "never", "asyncArrow": "always"}],
-    "no-return-assign": ["error", "always"],
+    "no-return-assign": "error",
     "padding-line-between-statements": [
       "error",
       { "blankLine": "always", "prev": "*", "next": ["function", "if", "for", "while", "switch", "try", ] },
