--- a/.babelrc
+++ b/.babelrc
@@ -5,18 +5,10 @@
     "react"
   ],
   "plugins": [
-    [
-      "transform-runtime", {
-        "polyfill": false,
-        "regenerator": true
-      },
-      "transform-class-properties",
-      "transform-object-rest-spread",
-      "transform-decorators-legacy",
-      "jest-hoist",
-      {
-        "useBuiltIns": true
-      }
-    ]
+    "transform-class-properties",
+    "transform-object-rest-spread",
+    "transform-decorators-legacy",
+    "jest-hoist",
+    "transform-runtime"
   ]
 }
