--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
   "homepage": "https://github.com/unfoldingWord-dev/translationCore#readme",
   "devDependencies": {
     "babel-cli": "6.26.0",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "23.4.2",
+    "babel-eslint": "8.2.2",
+    "babel-jest": "^21.2.0",
     "bluebird": "3.5.1",
     "codecov": "3.0.2",
     "cross-env": "5.1.6",
