--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
     "test": "eslint ./src && jest",
+    "test2": "jest UsfmFileConversionHelpers2",
     "ci-test": "eslint ./src && jest --coverage",
     "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
     "coverage": "jest --coverage",
@@ -103,6 +104,7 @@
     "jest-serializer-path": "^0.1.15",
     "jsdoc": "3.5.5",
     "ncp": "2.0.0",
+    "perf_hooks": "0.0.1",
     "prettier": "1.18.2",
     "react-addons-test-utils": "15.6.2",
     "react-test-renderer": "16.8.1",
