travis testing - added leak detection.

--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "npm-clean-up": "rm -rf node_modules/ && rm -rf tC_apps/*/node_modules && rm package-lock.json && npm i",
     "lint": "eslint ./src",
     "lint:fix": "eslint ./src --fix",
-    "test": "eslint ./src && jest --logHeapUsage --runInBand --no-cache",
+    "test": "eslint ./src && jest --logHeapUsage --runInBand",
     "test2": "jest --logHeapUsage --expose-gc --runInBand --detectLeaks LexiconHelpers",
-    "ci-test": "eslint ./src && jest --logHeapUsage --runInBand --detectLeaks --coverage",
+    "ci-test": "eslint ./src && jest --logHeapUsage --runInBand --no-cache --coverage",
     "release-osx": "npm i && gulp clean && npm i && npm run load-apps && gulp build --osx && gulp release --osx",
     "coverage": "jest --coverage",
     "load-apps": "git submodule update --init --recursive",
