testing Travis builds - get correct jest version.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ node_js:
 os:
   - linux
 before_install:
-  - npm i -g npm@6.4.1 jest codecov
+  - npm i -g npm@6.4.1 jest@23.6.0 codecov@3.0.2
   - npm --version
 install:
   - npm ci
