--- a/tcResources/en/translationHelps/translationNotes/v21/manifest.json
+++ b/tcResources/en/translationHelps/translationNotes/v21/manifest.json
@@ -370,31 +370,31 @@
     "description": "Open-licensed exegetical notes that provide historical, cultural, and linguistic information for translators. It provides translators and checkers with pertinent, just-in-time information to help them make the best possible translation decisions.",
     "format": "text/tsv",
     "identifier": "tn",
-    "issued": "2019-07-26",
+    "issued": "2019-11-21",
     "language": {
       "direction": "ltr",
       "identifier": "en",
       "title": "English"
     },
-    "modified": "2019-07-26",
+    "modified": "2019-11-21",
     "publisher": "unfoldingWord",
     "relation": [
       "en/ult",
-      "el-x-koine/ugnt?v=0.8",
-      "hbo/uhb?v=2.1.7"
+      "el-x-koine/ugnt?v=0.9",
+      "hbo/uhb?v=2.1.8"
     ],
     "rights": "CC BY-SA 4.0",
     "source": [
       {
         "identifier": "tn",
         "language": "en",
-        "version": "17"
+        "version": "21"
       }
     ],
     "subject": "TSV Translation Notes",
     "title": "unfoldingWord® Translation Notes",
     "type": "help",
-    "version": "17"
+    "version": "21"
   },
   "checking": {
     "checking_entity": [
@@ -404,7 +404,7 @@
   },
   "projects": [
     {
-      "title": "Genesis unfoldingWord® Translation Notes",
+      "title": "Genesis",
       "versification": "",
       "identifier": "gen",
       "sort": 1,
@@ -414,7 +414,7 @@
       ]
     },
     {
-      "title": "Exodus unfoldingWord® Translation Notes",
+      "title": "Exodus",
       "versification": "",
       "identifier": "exo",
       "sort": 2,
@@ -424,7 +424,7 @@
       ]
     },
     {
-      "title": "Leviticus unfoldingWord® Translation Notes",
+      "title": "Leviticus",
       "versification": "",
       "identifier": "lev",
       "sort": 3,
@@ -434,7 +434,7 @@
       ]
     },
     {
-      "title": "Numbers unfoldingWord® Translation Notes",
+      "title": "Numbers",
       "versification": "",
       "identifier": "num",
       "sort": 4,
@@ -444,7 +444,7 @@
       ]
     },
     {
-      "title": "Deuteronomy unfoldingWord® Translation Notes",
+      "title": "Deuteronomy",
       "versification": "",
       "identifier": "deu",
       "sort": 5,
@@ -454,7 +454,7 @@
       ]
     },
     {
-      "title": "Joshua unfoldingWord® Translation Notes",
+      "title": "Joshua",
       "versification": "",
       "identifier": "jos",
       "sort": 6,
@@ -464,7 +464,7 @@
       ]
     },
     {
-      "title": "Judges unfoldingWord® Translation Notes",
+      "title": "Judges",
       "versification": "",
       "identifier": "jdg",
       "sort": 7,
@@ -474,7 +474,7 @@
       ]
     },
     {
-      "title": "Ruth unfoldingWord® Translation Notes",
+      "title": "Ruth",
       "versification": "",
       "identifier": "rut",
       "sort": 8,
@@ -484,7 +484,7 @@
       ]
     },
     {
-      "title": "1 Samuel unfoldingWord® Translation Notes",
+      "title": "1 Samuel",
       "versification": "",
       "identifier": "1sa",
       "sort": 9,
@@ -494,7 +494,7 @@
       ]
     },
     {
-      "title": "2 Samuel unfoldingWord® Translation Notes",
+      "title": "2 Samuel",
       "versification": "",
       "identifier": "2sa",
       "sort": 10,
@@ -504,7 +504,7 @@
       ]
     },
     {
-      "title": "1 Kings unfoldingWord® Translation Notes",
+      "title": "1 Kings",
       "versification": "",
       "identifier": "1ki",
       "sort": 11,
@@ -514,7 +514,7 @@
       ]
     },
     {
-      "title": "2 Kings unfoldingWord® Translation Notes",
+      "title": "2 Kings",
       "versification": "",
       "identifier": "2ki",
       "sort": 12,
@@ -524,7 +524,7 @@
       ]
     },
     {
-      "title": "1 Chronicles unfoldingWord® Translation Notes",
+      "title": "1 Chronicles",
       "versification": "",
       "identifier": "1ch",
       "sort": 13,
@@ -534,7 +534,7 @@
       ]
     },
     {
-      "title": "2 Chronicles unfoldingWord® Translation Notes",
+      "title": "2 Chronicles",
       "versification": "",
       "identifier": "2ch",
       "sort": 14,
@@ -544,7 +544,7 @@
       ]
     },
     {
-      "title": "Ezra unfoldingWord® Translation Notes",
+      "title": "Ezra",
       "versification": "",
       "identifier": "ezr",
       "sort": 15,
@@ -554,7 +554,7 @@
       ]
     },
     {
-      "title": "Nehemiah unfoldingWord® Translation Notes",
+      "title": "Nehemiah",
       "versification": "",
       "identifier": "neh",
       "sort": 16,
@@ -564,7 +564,7 @@
       ]
     },
     {
-      "title": "Esther unfoldingWord® Translation Notes",
+      "title": "Esther",
       "versification": "",
       "identifier": "est",
       "sort": 17,
@@ -574,7 +574,7 @@
       ]
     },
     {
-      "title": "Job unfoldingWord® Translation Notes",
+      "title": "Job",
       "versification": "",
       "identifier": "job",
       "sort": 18,
@@ -584,7 +584,7 @@
       ]
     },
     {
-      "title": "Psalms unfoldingWord® Translation Notes",
+      "title": "Psalms",
       "versification": "",
       "identifier": "psa",
       "sort": 19,
@@ -594,7 +594,7 @@
       ]
     },
     {
-      "title": "Proverbs unfoldingWord® Translation Notes",
+      "title": "Proverbs",
       "versification": "",
       "identifier": "pro",
       "sort": 20,
@@ -604,7 +604,7 @@
       ]
     },
     {
-      "title": "Ecclesiastes unfoldingWord® Translation Notes",
+      "title": "Ecclesiastes",
       "versification": "",
       "identifier": "ecc",
       "sort": 21,
@@ -614,7 +614,7 @@
       ]
     },
     {
-      "title": "Song of Solomon unfoldingWord® Translation Notes",
+      "title": "Song of Solomon",
       "versification": "",
       "identifier": "sng",
       "sort": 22,
@@ -624,7 +624,7 @@
       ]
     },
     {
-      "title": "Isaiah unfoldingWord® Translation Notes",
+      "title": "Isaiah",
       "versification": "",
       "identifier": "isa",
       "sort": 23,
@@ -634,7 +634,7 @@
       ]
     },
     {
-      "title": "Jeremiah unfoldingWord® Translation Notes",
+      "title": "Jeremiah",
       "versification": "",
       "identifier": "jer",
       "sort": 24,
@@ -644,7 +644,7 @@
       ]
     },
     {
-      "title": "Lamentations unfoldingWord® Translation Notes",
+      "title": "Lamentations",
       "versification": "",
       "identifier": "lam",
       "sort": 25,
@@ -654,7 +654,7 @@
       ]
     },
     {
-      "title": "Ezekiel unfoldingWord® Translation Notes",
+      "title": "Ezekiel",
       "versification": "",
       "identifier": "ezk",
       "sort": 26,
@@ -664,7 +664,7 @@
       ]
     },
     {
-      "title": "Daniel unfoldingWord® Translation Notes",
+      "title": "Daniel",
       "versification": "",
       "identifier": "dan",
       "sort": 27,
@@ -674,7 +674,7 @@
       ]
     },
     {
-      "title": "Hosea unfoldingWord® Translation Notes",
+      "title": "Hosea",
       "versification": "",
       "identifier": "hos",
       "sort": 28,
@@ -684,7 +684,7 @@
       ]
     },
     {
-      "title": "Joel unfoldingWord® Translation Notes",
+      "title": "Joel",
       "versification": "",
       "identifier": "jol",
       "sort": 29,
@@ -694,7 +694,7 @@
       ]
     },
     {
-      "title": "Amos unfoldingWord® Translation Notes",
+      "title": "Amos",
       "versification": "",
       "identifier": "amo",
       "sort": 30,
@@ -704,7 +704,7 @@
       ]
     },
     {
-      "title": "Obadiah unfoldingWord® Translation Notes",
+      "title": "Obadiah",
       "versification": "",
       "identifier": "oba",
       "sort": 31,
@@ -714,7 +714,7 @@
       ]
     },
     {
-      "title": "Jonah unfoldingWord® Translation Notes",
+      "title": "Jonah",
       "versification": "",
       "identifier": "jon",
       "sort": 32,
@@ -724,7 +724,7 @@
       ]
     },
     {
-      "title": "Micah unfoldingWord® Translation Notes",
+      "title": "Micah",
       "versification": "",
       "identifier": "mic",
       "sort": 33,
@@ -734,7 +734,7 @@
       ]
     },
     {
-      "title": "Nahum unfoldingWord® Translation Notes",
+      "title": "Nahum",
       "versification": "",
       "identifier": "nam",
       "sort": 34,
@@ -744,7 +744,7 @@
       ]
     },
     {
-      "title": "Habakkuk unfoldingWord® Translation Notes",
+      "title": "Habakkuk",
       "versification": "",
       "identifier": "hab",
       "sort": 35,
@@ -754,7 +754,7 @@
       ]
     },
     {
-      "title": "Zephaniah unfoldingWord® Translation Notes",
+      "title": "Zephaniah",
       "versification": "",
       "identifier": "zep",
       "sort": 36,
@@ -764,7 +764,7 @@
       ]
     },
     {
-      "title": "Haggai unfoldingWord® Translation Notes",
+      "title": "Haggai",
       "versification": "",
       "identifier": "hag",
       "sort": 37,
@@ -774,7 +774,7 @@
       ]
     },
     {
-      "title": "Zechariah unfoldingWord® Translation Notes",
+      "title": "Zechariah",
       "versification": "",
       "identifier": "zec",
       "sort": 38,
@@ -784,7 +784,7 @@
       ]
     },
     {
-      "title": "Malachi unfoldingWord® Translation Notes",
+      "title": "Malachi",
       "versification": "",
       "identifier": "mal",
       "sort": 39,
@@ -794,7 +794,7 @@
       ]
     },
     {
-      "title": "Matthew unfoldingWord® Translation Notes",
+      "title": "Matthew",
       "versification": "",
       "identifier": "mat",
       "sort": 40,
@@ -804,7 +804,7 @@
       ]
     },
     {
-      "title": "Mark unfoldingWord® Translation Notes",
+      "title": "Mark",
       "versification": "",
       "identifier": "mrk",
       "sort": 41,
@@ -814,7 +814,7 @@
       ]
     },
     {
-      "title": "Luke unfoldingWord® Translation Notes",
+      "title": "Luke",
       "versification": "",
       "identifier": "luk",
       "sort": 42,
@@ -824,7 +824,7 @@
       ]
     },
     {
-      "title": "John unfoldingWord® Translation Notes",
+      "title": "John",
       "versification": "",
       "identifier": "jhn",
       "sort": 43,
@@ -834,7 +834,7 @@
       ]
     },
     {
-      "title": "Acts unfoldingWord® Translation Notes",
+      "title": "Acts",
       "versification": "",
       "identifier": "act",
       "sort": 44,
@@ -844,7 +844,7 @@
       ]
     },
     {
-      "title": "Romans unfoldingWord® Translation Notes",
+      "title": "Romans",
       "versification": "",
       "identifier": "rom",
       "sort": 45,
@@ -854,7 +854,7 @@
       ]
     },
     {
-      "title": "1 Corinthians unfoldingWord® Translation Notes",
+      "title": "1 Corinthians",
       "versification": "",
       "identifier": "1co",
       "sort": 46,
@@ -864,7 +864,7 @@
       ]
     },
     {
-      "title": "2 Corinthians unfoldingWord® Translation Notes",
+      "title": "2 Corinthians",
       "versification": "",
       "identifier": "2co",
       "sort": 47,
@@ -874,7 +874,7 @@
       ]
     },
     {
-      "title": "Galatians unfoldingWord® Translation Notes",
+      "title": "Galatians",
       "versification": "",
       "identifier": "gal",
       "sort": 48,
@@ -884,7 +884,7 @@
       ]
     },
     {
-      "title": "Ephesians unfoldingWord® Translation Notes",
+      "title": "Ephesians",
       "versification": "",
       "identifier": "eph",
       "sort": 49,
@@ -894,7 +894,7 @@
       ]
     },
     {
-      "title": "Philippians unfoldingWord® Translation Notes",
+      "title": "Philippians",
       "versification": "",
       "identifier": "php",
       "sort": 50,
@@ -904,7 +904,7 @@
       ]
     },
     {
-      "title": "Colossians unfoldingWord® Translation Notes",
+      "title": "Colossians",
       "versification": "",
       "identifier": "col",
       "sort": 51,
@@ -914,7 +914,7 @@
       ]
     },
     {
-      "title": "1 Thessalonians unfoldingWord® Translation Notes",
+      "title": "1 Thessalonians",
       "versification": "",
       "identifier": "1th",
       "sort": 52,
@@ -924,7 +924,7 @@
       ]
     },
     {
-      "title": "2 Thessalonians unfoldingWord® Translation Notes",
+      "title": "2 Thessalonians",
       "versification": "",
       "identifier": "2th",
       "sort": 53,
@@ -934,7 +934,7 @@
       ]
     },
     {
-      "title": "1 Timothy unfoldingWord® Translation Notes",
+      "title": "1 Timothy",
       "versification": "",
       "identifier": "1ti",
       "sort": 54,
@@ -944,7 +944,7 @@
       ]
     },
     {
-      "title": "2 Timothy unfoldingWord® Translation Notes",
+      "title": "2 Timothy",
       "versification": "",
       "identifier": "2ti",
       "sort": 55,
@@ -954,7 +954,7 @@
       ]
     },
     {
-      "title": "Titus unfoldingWord® Translation Notes",
+      "title": "Titus",
       "versification": "",
       "identifier": "tit",
       "sort": 56,
@@ -964,7 +964,7 @@
       ]
     },
     {
-      "title": "Philemon unfoldingWord® Translation Notes",
+      "title": "Philemon",
       "versification": "",
       "identifier": "phm",
       "sort": 57,
@@ -974,7 +974,7 @@
       ]
     },
     {
-      "title": "Hebrews unfoldingWord® Translation Notes",
+      "title": "Hebrews",
       "versification": "",
       "identifier": "heb",
       "sort": 58,
@@ -984,7 +984,7 @@
       ]
     },
     {
-      "title": "James unfoldingWord® Translation Notes",
+      "title": "James",
       "versification": "",
       "identifier": "jas",
       "sort": 59,
@@ -994,7 +994,7 @@
       ]
     },
     {
-      "title": "1 Peter unfoldingWord® Translation Notes",
+      "title": "1 Peter",
       "versification": "",
       "identifier": "1pe",
       "sort": 60,
@@ -1004,7 +1004,7 @@
       ]
     },
     {
-      "title": "2 Peter unfoldingWord® Translation Notes",
+      "title": "2 Peter",
       "versification": "",
       "identifier": "2pe",
       "sort": 61,
@@ -1014,7 +1014,7 @@
       ]
     },
     {
-      "title": "1 John unfoldingWord® Translation Notes",
+      "title": "1 John",
       "versification": "",
       "identifier": "1jn",
       "sort": 62,
@@ -1024,7 +1024,7 @@
       ]
     },
     {
-      "title": "2 John unfoldingWord® Translation Notes",
+      "title": "2 John",
       "versification": "",
       "identifier": "2jn",
       "sort": 63,
@@ -1034,7 +1034,7 @@
       ]
     },
     {
-      "title": "3 John unfoldingWord® Translation Notes",
+      "title": "3 John",
       "versification": "",
       "identifier": "3jn",
       "sort": 64,
@@ -1044,7 +1044,7 @@
       ]
     },
     {
-      "title": "Jude unfoldingWord® Translation Notes",
+      "title": "Jude",
       "versification": "",
       "identifier": "jud",
       "sort": 65,
@@ -1054,7 +1054,7 @@
       ]
     },
     {
-      "title": "Revelation unfoldingWord® Translation Notes",
+      "title": "Revelation",
       "versification": "",
       "identifier": "rev",
       "sort": 66,
@@ -1064,5 +1064,5 @@
       ]
     }
   ],
-  "catalog_modified_time": "2019-07-26T14:46:34+00:00"
+  "catalog_modified_time": "2019-11-21T14:48:37+00:00"
 }
